--- a/src/pages/detail/Detail.css
+++ b/src/pages/detail/Detail.css
@@ -7,7 +7,7 @@
 .detail-hotel {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .detail-container {
