--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -44,3 +44,9 @@
 .form-subcribe button:hover {
   opacity: 1;
 }
+
+/* .wellcome {
+  font-size: 40px;
+  text-align: "center";
+  display: none;
+} */
