--- a/src/components/hotel/Hotel.css
+++ b/src/components/hotel/Hotel.css
@@ -2,6 +2,57 @@
   position: relative;
 }
 
+.slide {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+}
+
+.slide-image {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide-image > img {
+  margin: 40px 0;
+  width: 95%;
+  height: 80vh;
+  border-radius: 5px;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 30px;
+  color: lightgray;
+  cursor: pointer;
+}
+
+.arrow-prev,
+.arrow-next {
+  font-size: 40px;
+  color: lightgray;
+  cursor: pointer;
+}
+
+.arrow-prev {
+  margin-left: 10px;
+}
+
+.arrow-next {
+  margin-right: 10px;
+}
+
 .hotel-title {
   font-size: 26px;
   font-weight: bold;
@@ -9,7 +60,7 @@
 
 .hotel-btn {
   position: absolute;
-  top: 10px;
+  /* top: 10px; */
   right: 0;
   padding: 15px;
   background-color: #0071c2;
